[package]
name = "rwcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3"
structopt = "0.3.23"
hex = "0.4.3"
dirs = "4"
sha2 = "0.9.8"
base64 = "0.13.0"
rand = "0.8"
ed25519-dalek = "1"
